package com.prj1.ccm.nguoithue;

record AnhDinhKem(Long id, String doiTuongLoai, Long doiTuongId, String khoaLuuTru, String ghiChu, String loaiNoiDung, long kichThuoc) {
}
