CREATE TABLE HOP_DONG (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    phong_id BIGINT NOT NULL REFERENCES PHONG(id),
    nguoi_thue_id BIGINT NOT NULL REFERENCES NGUOI_THUE(id),
    ngay_bat_dau DATE NOT NULL,
    ngay_ket_thuc DATE NOT NULL,
    gia_thue NUMERIC(15,2) NOT NULL CHECK (gia_thue >= 0),
    tien_coc NUMERIC(15,2) NOT NULL CHECK (tien_coc >= 0),
    so_ngay_bao_truoc INTEGER NOT NULL CHECK (so_ngay_bao_truoc >= 0),
    trang_thai VARCHAR(20) NOT NULL CHECK (trang_thai IN ('CHO_KY', 'DA_COC', 'HIEU_LUC', 'DA_THANH_LY')),
    CONSTRAINT ck_hop_dong_ngay CHECK (ngay_ket_thuc > ngay_bat_dau)
);

CREATE TABLE HOP_DONG_DICH_VU (
    hop_dong_id BIGINT NOT NULL REFERENCES HOP_DONG(id) ON DELETE CASCADE,
    dich_vu_id BIGINT NOT NULL REFERENCES DICH_VU(id),
    don_gia_ap_dung NUMERIC(15,2) NOT NULL CHECK (don_gia_ap_dung >= 0),
    PRIMARY KEY (hop_dong_id, dich_vu_id)
);
