CREATE TABLE CHI_SO_DICH_VU (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ky_id BIGINT NOT NULL REFERENCES KY_THANH_TOAN(id) ON DELETE CASCADE,
    phong_id BIGINT NOT NULL REFERENCES PHONG(id),
    dich_vu_id BIGINT NOT NULL REFERENCES DICH_VU(id),
    chi_so_dau NUMERIC(15,2) NOT NULL,
    chi_so_cuoi NUMERIC(15,2) NOT NULL,
    co_thay_cong_to BOOLEAN NOT NULL DEFAULT FALSE,
    nguoi_ghi_id BIGINT NOT NULL REFERENCES NGUOI_DUNG(id),
    thoi_diem_ghi TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE UNIQUE INDEX uq_chi_so_dich_vu_ky_phong_dich_vu
    ON CHI_SO_DICH_VU (ky_id, phong_id, dich_vu_id);
