CREATE TABLE HOA_DON (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ma_hoa_don VARCHAR(100) NOT NULL,
    ky_id BIGINT NOT NULL REFERENCES KY_THANH_TOAN(id),
    hop_dong_id BIGINT NOT NULL REFERENCES HOP_DONG(id),
    ngay_phat_hanh DATE NOT NULL,
    han_thanh_toan DATE NOT NULL,
    tong_tien NUMERIC(15,2) NOT NULL,
    da_thu NUMERIC(15,2) NOT NULL DEFAULT 0,
    trang_thai VARCHAR(30) NOT NULL CHECK (
        trang_thai IN ('NHAP', 'DA_PHAT_HANH', 'DA_THU_MOT_PHAN', 'DA_THANH_TOAN', 'QUA_HAN', 'DA_HUY')
    ),
    CONSTRAINT uq_hoa_don_ma_hoa_don UNIQUE (ma_hoa_don),
    CONSTRAINT uq_hoa_don_hop_dong_ky UNIQUE (hop_dong_id, ky_id)
);

CREATE INDEX ix_hoa_don_ky
    ON HOA_DON (ky_id);

CREATE INDEX ix_hoa_don_hop_dong
    ON HOA_DON (hop_dong_id);

CREATE TABLE CHI_TIET_HOA_DON (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    hoa_don_id BIGINT NOT NULL REFERENCES HOA_DON(id) ON DELETE CASCADE,
    dich_vu_id BIGINT NULL REFERENCES DICH_VU(id),
    ten_khoan VARCHAR(255) NOT NULL,
    chi_so_dau NUMERIC(15,2) NULL,
    chi_so_cuoi NUMERIC(15,2) NULL,
    so_luong NUMERIC(15,2) NULL,
    don_gia NUMERIC(15,2) NULL,
    thanh_tien NUMERIC(15,2) NOT NULL,
    loai_khoan VARCHAR(30) NOT NULL CHECK (
        loai_khoan IN ('TIEN_PHONG', 'DICH_VU', 'KHOAN_PHAT_SINH', 'SO_DU', 'LAM_TRON')
    )
);

CREATE INDEX ix_chi_tiet_hoa_don_hoa_don
    ON CHI_TIET_HOA_DON (hoa_don_id);
