-- THOI_DIEM_TAO is required by ruling 4: the 24-hour counter-entry window
-- starts when the payment record is written, not from the user-entered ngay_thu.
CREATE SEQUENCE seq_thanh_toan_ma_bien_lai START WITH 1;

CREATE TABLE THANH_TOAN (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    hoa_don_id BIGINT NOT NULL REFERENCES HOA_DON(id),
    so_tien NUMERIC(15,2) NOT NULL,
    loai VARCHAR(20) NOT NULL CHECK (loai IN ('THU', 'DOI_UNG')),
    dieu_chinh_cho_id BIGINT NULL REFERENCES THANH_TOAN(id),
    ly_do TEXT NULL,
    hinh_thuc VARCHAR(20) NULL CHECK (hinh_thuc IN ('TIEN_MAT', 'CHUYEN_KHOAN')),
    ngay_thu DATE NULL,
    nguoi_thu_id BIGINT NULL REFERENCES NGUOI_DUNG(id),
    ma_bien_lai VARCHAR(100) NOT NULL DEFAULT (
        'TT-' || TO_CHAR(CURRENT_DATE, 'YYYYMMDD') || '-'
            || LPAD(NEXTVAL('seq_thanh_toan_ma_bien_lai')::TEXT, 8, '0')
    ),
    thoi_diem_tao TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT ck_thanh_toan_ly_do_doi_ung CHECK (
        loai <> 'DOI_UNG' OR (ly_do IS NOT NULL AND BTRIM(ly_do) <> '')
    ),
    CONSTRAINT uq_thanh_toan_ma_bien_lai UNIQUE (ma_bien_lai)
);

-- Preserve an existing HOA_DON.da_thu when this migration is applied to a database
-- that predates the payment ledger. The old aggregate has no actor, payment method,
-- or receipt to recover, so keep those facts explicitly unknown instead of inventing
-- an audit identity. New API-created rows always provide nguoi_thu_id and use the
-- automatic receipt default.
INSERT INTO THANH_TOAN (
    hoa_don_id, so_tien, loai, hinh_thuc, ngay_thu, nguoi_thu_id, ma_bien_lai, ly_do
)
SELECT hd.id,
       hd.da_thu,
       'THU',
       NULL,
       NULL,
       NULL,
       'LEGACY-HOADON-' || hd.id,
       'Tổng đã thu tồn tại trước khi có sổ THANH_TOAN; thông tin người thu không được lưu.'
FROM HOA_DON hd
WHERE hd.da_thu <> 0;

CREATE INDEX ix_thanh_toan_hoa_don
    ON THANH_TOAN (hoa_don_id, id);

CREATE INDEX ix_thanh_toan_dieu_chinh_cho
    ON THANH_TOAN (dieu_chinh_cho_id);
