CREATE TABLE NGUOI_DUNG (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ho_ten VARCHAR(255) NOT NULL,
    so_dien_thoai VARCHAR(20) NOT NULL UNIQUE,
    mat_khau_hash VARCHAR(255) NOT NULL,
    vai_tro VARCHAR(20) NOT NULL CHECK (vai_tro IN ('QTHT', 'CHU', 'QUAN_LY', 'THO', 'NGUOI_THUE')),
    trang_thai VARCHAR(20) NOT NULL CHECK (trang_thai IN ('HOAT_DONG', 'BI_KHOA')),
    phien_ban_token INTEGER NOT NULL DEFAULT 0,
    so_lan_sai INTEGER NOT NULL DEFAULT 0,
    lan_sai_dau_tien TIMESTAMP NULL,
    khoa_den TIMESTAMP NULL
);

CREATE TABLE TOA_NHA (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ma_toa VARCHAR(50) NOT NULL UNIQUE,
    ten VARCHAR(255) NOT NULL,
    dia_chi VARCHAR(500) NOT NULL,
    so_tang INTEGER NOT NULL CHECK (so_tang > 0),
    ngay_chot_so INTEGER NOT NULL CHECK (ngay_chot_so BETWEEN 1 AND 28),
    so_ngay_han_tt INTEGER NOT NULL CHECK (so_ngay_han_tt > 0),
    tk_ngan_hang VARCHAR(100) NOT NULL,
    nguong_that_thoat NUMERIC(15,2) NOT NULL
);

CREATE TABLE PHAN_QUYEN_TOA (
    nguoi_dung_id BIGINT NOT NULL REFERENCES NGUOI_DUNG(id),
    toa_nha_id BIGINT NOT NULL REFERENCES TOA_NHA(id),
    PRIMARY KEY (nguoi_dung_id, toa_nha_id)
);

INSERT INTO TOA_NHA (
    id, ma_toa, ten, dia_chi, so_tang, ngay_chot_so, so_ngay_han_tt, tk_ngan_hang, nguong_that_thoat
) VALUES
    (1, 'TN-A', 'Toà A — Ngõ Hoà Bình', 'Số 12 ngõ 34 đường Hoà Bình, Phường Mẫu, Hà Nội', 6, 25, 7, '9704-0000-0000-0101', 150000.00),
    (2, 'TN-B', 'Toà B — Bến Vân Đồn', 'Số 8 đường Bến Vân Đồn, Phường Mẫu, Thành phố Hồ Chí Minh', 5, 26, 7, '9704-0000-0000-0202', 175000.00);

INSERT INTO NGUOI_DUNG (
    id, ho_ten, so_dien_thoai, mat_khau_hash, vai_tro, trang_thai, phien_ban_token, so_lan_sai, lan_sai_dau_tien, khoa_den
) VALUES
    (1, 'Quản trị hệ thống', '0900000001', 'pbkdf2$150000$dBvJksg+uY4X7XPHzZCGJw==$LLEsgCWlkPoD3bBs5dTXSewrPQXhxtLHR8sg99n0QqQ=', 'QTHT', 'HOAT_DONG', 0, 0, NULL, NULL),
    (2, 'Chủ sở hữu mẫu', '0900000002', 'pbkdf2$150000$pc0t5RDv/3OyspI0R4Z3EQ==$biqz2zQLERpxpvAF/n0XaZqXNJCwkn6VQ5vNwgmPiGU=', 'CHU', 'HOAT_DONG', 0, 0, NULL, NULL),
    (3, 'Quản lý Toà A', '0900000003', 'pbkdf2$150000$+aF60RUSKCLImBQfsOY6GA==$aTTa/0C03Kj9hFxepucSCVc+b0XfXl9IoCstDdFjbuQ=', 'QUAN_LY', 'HOAT_DONG', 0, 0, NULL, NULL),
    (4, 'Thợ sửa chữa mẫu', '0900000004', 'pbkdf2$150000$D9RILQhZzX1iGw1zo359Gg==$Mn7bqDlQ+IMcVI2Cz7mVWDys/A/LxSsqWCB2HD3Ljfc=', 'THO', 'HOAT_DONG', 0, 0, NULL, NULL),
    (5, 'Người thuê mẫu', '0900000006', 'pbkdf2$150000$mWjKLFx22XqiFMknpYRNWA==$SlG5dhkkjfyl1JKyRqKlGn8HhBdg0B8vRcw72bXCO7o=', 'NGUOI_THUE', 'HOAT_DONG', 0, 0, NULL, NULL);

INSERT INTO PHAN_QUYEN_TOA (nguoi_dung_id, toa_nha_id)
VALUES (3, 1);

ALTER SEQUENCE NGUOI_DUNG_id_seq RESTART WITH 6;
ALTER SEQUENCE TOA_NHA_id_seq RESTART WITH 3;
