CREATE SEQUENCE yeu_cau_sua_chua_ma_seq START WITH 1 INCREMENT BY 1;

CREATE TABLE YEU_CAU_SUA_CHUA (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ma_yeu_cau VARCHAR(40) NOT NULL DEFAULT (
        'SC-' || TO_CHAR(CURRENT_DATE, 'YYYYMM') || '-'
            || LPAD(nextval('yeu_cau_sua_chua_ma_seq')::TEXT, 4, '0')
    ),
    phong_id BIGINT NOT NULL REFERENCES PHONG(id),
    nguoi_tao_id BIGINT NOT NULL REFERENCES NGUOI_DUNG(id),
    hang_muc VARCHAR(100) NOT NULL,
    mo_ta TEXT NOT NULL,
    muc_do VARCHAR(20) NOT NULL CHECK (muc_do IN ('THUONG', 'GAP', 'KHAN_CAP')),
    trang_thai VARCHAR(30) NOT NULL DEFAULT 'MOI_TIEP_NHAN' CHECK (
        trang_thai IN (
            'MOI_TIEP_NHAN', 'DA_TIEP_NHAN', 'DA_PHAN_CONG',
            'DANG_XU_LY', 'CHO_XAC_NHAN', 'DA_DONG', 'DA_HUY'
        )
    ),
    nguoi_tiep_nhan_id BIGINT NULL REFERENCES NGUOI_DUNG(id),
    tiep_nhan_luc TIMESTAMPTZ NULL,
    nguoi_xu_ly_id BIGINT NULL REFERENCES NGUOI_DUNG(id),
    phan_cong_luc TIMESTAMPTZ NULL,
    chi_phi NUMERIC(15,2) NULL CHECK (chi_phi IS NULL OR chi_phi >= 0),
    ben_chiu_chi_phi VARCHAR(20) NULL CHECK (ben_chiu_chi_phi IS NULL OR ben_chiu_chi_phi IN ('CHU_NHA', 'NGUOI_THUE')),
    cho_xac_nhan_luc TIMESTAMPTZ NULL,
    ly_do_huy TEXT NULL,
    tao_luc TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_yeu_cau_sua_chua_ma UNIQUE (ma_yeu_cau)
);

CREATE INDEX idx_yeu_cau_sua_chua_phong_trang_thai
    ON YEU_CAU_SUA_CHUA (phong_id, trang_thai);

CREATE INDEX idx_yeu_cau_sua_chua_nguoi_xu_ly_trang_thai
    ON YEU_CAU_SUA_CHUA (nguoi_xu_ly_id, trang_thai);
