CREATE TABLE THONG_BAO (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ma_tham_chieu UUID NOT NULL UNIQUE,
    nguoi_nhan_id BIGINT NOT NULL REFERENCES NGUOI_DUNG(id),
    doi_tuong_loai VARCHAR(50) NOT NULL CHECK (doi_tuong_loai IN ('YEU_CAU_SUA_CHUA', 'HOA_DON')),
    doi_tuong_id BIGINT NOT NULL,
    tieu_de VARCHAR(255) NOT NULL,
    noi_dung TEXT NOT NULL,
    da_doc BOOLEAN NOT NULL DEFAULT FALSE,
    doc_luc TIMESTAMPTZ NULL,
    tao_luc TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX ix_thong_bao_nguoi_nhan_da_doc_tao_luc
    ON THONG_BAO (nguoi_nhan_id, da_doc, tao_luc DESC, id DESC);

CREATE INDEX ix_thong_bao_doi_tuong
    ON THONG_BAO (doi_tuong_loai, doi_tuong_id);
