erDiagram
  NGUOI_DUNG ||--o{ PHAN_QUYEN_TOA : "được gán"
  TOA_NHA ||--o{ PHAN_QUYEN_TOA : "có"
  TOA_NHA ||--|{ PHONG : "gồm"
  TOA_NHA ||--o{ DICH_VU : "khai báo"
  TOA_NHA ||--o{ KY_THANH_TOAN : "có"
  TOA_NHA ||--o{ THONG_BAO : "phát"
  TOA_NHA ||--o{ THIET_BI_PCCC : "trang bị"
  TOA_NHA ||--o{ HO_SO_AN_TOAN : "lưu"
  DICH_VU ||--o{ BANG_GIA : "có lịch sử giá"
  PHONG ||--o{ HOP_DONG : "được thuê qua"
  PHONG ||--o{ TAI_SAN_PHONG : "trang bị"
  PHONG ||--o{ CHI_SO_DICH_VU : "ghi nhận"
  PHONG ||--o{ YEU_CAU_SUA_CHUA : "phát sinh"
  NGUOI_THUE ||--o{ HOP_DONG : "đại diện ký"
  HOP_DONG ||--o{ NGUOI_O_CUNG : "có"
  NGUOI_THUE ||--o{ NGUOI_O_CUNG : "là"
  HOP_DONG ||--o{ PHUONG_TIEN : "đăng ký"
  HOP_DONG ||--o{ HOP_DONG_DICH_VU : "áp dụng"
  DICH_VU ||--o{ HOP_DONG_DICH_VU : "được áp dụng"
  HOP_DONG ||--o{ HOA_DON : "phát sinh"
  KY_THANH_TOAN ||--o{ HOA_DON : "thuộc kỳ"
  KY_THANH_TOAN ||--o{ CHI_SO_DICH_VU : "thuộc kỳ"
  DICH_VU ||--o{ CHI_SO_DICH_VU : "đo bởi"
  HOA_DON ||--|{ CHI_TIET_HOA_DON : "gồm"
  HOA_DON ||--o{ THANH_TOAN : "được trả bởi"
  NGUOI_DUNG ||--o{ THANH_TOAN : "ghi nhận"
  NGUOI_DUNG ||--o{ CHI_SO_DICH_VU : "người ghi"
  NGUOI_DUNG ||--o{ YEU_CAU_SUA_CHUA : "xử lý"
  NGUOI_DUNG ||--o{ NHAT_KY_THAO_TAC : "thực hiện"
  YEU_CAU_SUA_CHUA ||--o{ ANH_DINH_KEM : "có"
  CHI_SO_DICH_VU ||--o{ ANH_DINH_KEM : "có ảnh công tơ"

  NGUOI_DUNG {
    bigint id PK
    string ho_ten
    string so_dien_thoai UK
    string mat_khau_hash
    enum vai_tro "QTHT|CHU|QUAN_LY|THO|NGUOI_THUE"
    enum trang_thai
  }
  PHAN_QUYEN_TOA {
    bigint nguoi_dung_id FK
    bigint toa_nha_id FK
  }
  TOA_NHA {
    bigint id PK
    string ma_toa UK
    string ten
    string dia_chi
    int so_tang
    int ngay_chot_so
    int so_ngay_han_tt
    string tk_ngan_hang
    decimal nguong_that_thoat
  }
  PHONG {
    bigint id PK
    bigint toa_nha_id FK
    string so_phong
    int tang
    decimal dien_tich
    int suc_chua
    decimal gia_thue_mac_dinh
    enum trang_thai "TRONG|DANG_THUE|DA_COC|DANG_SUA|NGUNG"
  }
  NGUOI_THUE {
    bigint id PK
    string ho_ten
    date ngay_sinh
    string so_dien_thoai
    string so_giay_to
    string que_quan
    string anh_giay_to_url
    enum trang_thai_luu_tru
  }
  HOP_DONG {
    bigint id PK
    bigint phong_id FK
    bigint nguoi_thue_id FK
    date ngay_bat_dau
    date ngay_ket_thuc
    decimal gia_thue
    decimal tien_coc
    int so_ngay_bao_truoc
    enum trang_thai "HIEU_LUC|SAP_HET|DA_THANH_LY"
  }
  NGUOI_O_CUNG {
    bigint id PK
    bigint hop_dong_id FK
    bigint nguoi_thue_id FK
    string quan_he
  }
  PHUONG_TIEN {
    bigint id PK
    bigint hop_dong_id FK
    enum loai_xe
    string bien_so
    date ngay_dang_ky
  }
  DICH_VU {
    bigint id PK
    bigint toa_nha_id FK
    string ten
    enum cach_tinh "THEO_CHI_SO|CO_DINH|THEO_NGUOI|THEO_SO_LUONG"
    enum che_do_gia "CO_DINH|BAC_THANG"
    string don_vi
  }
  BANG_GIA {
    bigint id PK
    bigint dich_vu_id FK
    decimal don_gia
    date ngay_hieu_luc
  }
  HOP_DONG_DICH_VU {
    bigint hop_dong_id FK
    bigint dich_vu_id FK
    decimal don_gia_ap_dung
  }
  KY_THANH_TOAN {
    bigint id PK
    bigint toa_nha_id FK
    int nam
    int thang
    date ngay_bat_dau
    date ngay_ket_thuc
    enum trang_thai "DANG_MO|DA_CHOT"
  }
  CHI_SO_DICH_VU {
    bigint id PK
    bigint ky_id FK
    bigint phong_id FK
    bigint dich_vu_id FK
    decimal chi_so_dau
    decimal chi_so_cuoi
    boolean co_thay_cong_to
    bigint nguoi_ghi_id FK
    datetime thoi_diem_ghi
  }
  HOA_DON {
    bigint id PK
    string ma_hoa_don UK
    bigint ky_id FK
    bigint hop_dong_id FK
    date ngay_phat_hanh
    date han_thanh_toan
    decimal tong_tien
    decimal da_thu
    enum trang_thai "NHAP|DA_PHAT_HANH|THU_MOT_PHAN|DA_TT|QUA_HAN|DA_HUY"
  }
  CHI_TIET_HOA_DON {
    bigint id PK
    bigint hoa_don_id FK
    bigint dich_vu_id FK
    string ten_khoan
    decimal chi_so_dau
    decimal chi_so_cuoi
    decimal so_luong
    decimal don_gia
    decimal thanh_tien
    enum loai_khoan "DICH_VU|PHAT_SINH|GIAM_TRU|LAM_TRON"
  }
  THANH_TOAN {
    bigint id PK
    bigint hoa_don_id FK
    decimal so_tien
    enum hinh_thuc "TIEN_MAT|CHUYEN_KHOAN"
    date ngay_thu
    bigint nguoi_thu_id FK
    string ma_bien_lai
  }
  YEU_CAU_SUA_CHUA {
    bigint id PK
    string ma_yeu_cau UK
    bigint phong_id FK
    bigint nguoi_tao_id FK
    enum hang_muc
    enum muc_do "KHAN_CAP|BINH_THUONG|CHO_DUOC"
    enum trang_thai
    bigint nguoi_xu_ly_id FK
    decimal chi_phi
    enum ben_chiu_chi_phi
  }
  TAI_SAN_PHONG {
    bigint id PK
    bigint phong_id FK
    string ten
    enum tinh_trang
    decimal gia_tri
  }
  ANH_DINH_KEM {
    bigint id PK
    string doi_tuong_loai
    bigint doi_tuong_id
    string duong_dan
  }
  THONG_BAO {
    bigint id PK
    bigint toa_nha_id FK
    string tieu_de
    text noi_dung
    string pham_vi
    date tu_ngay
    date den_ngay
  }
  THIET_BI_PCCC {
    bigint id PK
    bigint toa_nha_id FK
    string loai
    string vi_tri
    date han_kiem_dinh
  }
  HO_SO_AN_TOAN {
    bigint id PK
    bigint toa_nha_id FK
    string loai_ho_so
    string duong_dan
    date ngay_het_han
  }
  NHAT_KY_THAO_TAC {
    bigint id PK
    bigint nguoi_dung_id FK
    string hanh_dong
    string doi_tuong
    text gia_tri_truoc
    text gia_tri_sau
    datetime thoi_diem
  }
